--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ iframe {
     margin: 20px;
 }
 .redes{
-    margin: 20px;
+    margin: 20px 20px 20px 20px;
     font-size: 24px;
     color: #555;
     text-align: center;
